Fixed scrollbars

--- a/client/style.css
+++ b/client/style.css
@@ -30,10 +30,14 @@ input:focus {
 body::-webkit-scrollbar
 {
 	width: 10px;
+	height: 10px;
 	background-color: black;
 }
 body::-webkit-scrollbar-thumb
 {
 	border-radius: 5px;
 	background-color: white;
+}
+body::-webkit-scrollbar-corner {
+    background-color: black;
 }
